# geoquery

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  Vagrantfile  add_test_data.py  conn.py  docker-compose.yml  extract_rebuild.py  import_boundaries.py  ingest_dataset.py  init_db.py  insert_dataset.py  insert_features.py  insert_request.py  mkdocs.yml  prepare_gB.py  processors.py  pyproject.toml  requirements.txt  resource_management.py  schema.aml  setup_test_data.py  shortcut.sh  zensical.toml
backend/: .gitignore  Containerfile  manage.py  pyproject.toml
backend/analytics/: admin.py  ingest.py  models.py  signals.py  throttles.py  urls.py  views.py
backend/analytics/management/commands/: build_extract_tasks.py  clean_processing_tasks.py  free_stale_processing_tasks.py  generate_coverage_records.py  generate_stats.py  manage_processing_task_errors.py  manage_user_requests.py  reset_errored_requests.py  run_processing_tasks.py  run_usage_stats.py  run_user_outreach.py
backend/analytics/migrations/: 0001_initial.py  0002_request_comments_requested_request_contact_flag.py  0003_request_info_textfield.py  0004_request_data_jsonfield.py  0005_remove_request_date.py  0006_requesttoken.py  0007_remove_requesttoken_email_unique.py  0008_requesttoken_hash_existing.py  0009_extracttask_kwargs_uniqueness.py  0010_int_value_bigint.py  0011_extracttask_kwargs_index_md5.py
backend/analytics/tasks/: __init__.py  coverage.py  documentation.py  email.py  extract.py  maintenance.py  merge.py  processing.py  stats.py
backend/config/: boundary_presets.yaml
backend/datasets/: admin.py  apps.py  ingest.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/datasets/management/commands/: build_dataset_docs.py  ingest_dataset.py
backend/datasets/migrations/: 0001_initial.py  0002_alter_dataset_name.py  0003_remove_dataset_coverage_dependency.py  0004_dataset_short_name.py  0005_dataset_processing_class.py  0006_alter_datasetresource_path_unique_per_dataset.py  0007_alter_dataset_citation_alter_dataset_description_and_more.py
backend/datasets/tasks/: __init__.py  create_docs.py
backend/features/: admin.py  apps.py  matviews.py  models.py  signals.py  urls.py  views.py
backend/features/management/commands/: build_boundary_docs.py  download_geoboundaries.py  ingest_geoboundaries.py  ingest_tiger.py  refresh_matviews.py
backend/features/migrations/: 0001_initial.py  0002_simplified_geometry_matviews.py  0003_composite_matview_indexes.py  0004_matview_add_geom_id.py  0005_user_upload_fields.py  0006_featurecollection_short_name.py
backend/features/tasks/: __init__.py  create_docs.py
backend/geoquery/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
backend/ingest/datasets/: critical_habitats.py  esa_lc.py  malaria_atlas_project.py  plad.py  wdpa.py
backend/ingest/datasets/cru_ts/: yearly_pre_raster_ingest.py  yearly_tmp_raster_ingest.py
backend/ingest/datasets/gpm/: monthly_raster_ingest.py  yearly_raster_ingest.py
backend/ingest/datasets/modis_lst/: yearly_night_ingest.py
backend/ingest/datasets/oco2/: monthly_raster_ingest.py  yearly_raster_ingest.py
backend/ingest/datasets/pm25/: monthly_raster_ingest.py
backend/src/gqcore/: __init__.py  tmp.py
backend/src/gqcore/api/: info_resp.json  main.py
backend/src/gqcore/tasks/: init_db.py  manage_errors.py  process_extract_tasks.py
backend/src/gqcore/utils/db/: conn.py  extract_task_generation.py  features.py  helpers.py  request_processing.py
backend/src/gqcore/utils/db/init/: init_all.py  init_pg_functions.py  init_pg_tables.py
backend/src/gqcore/utils/ingest/: ingest_dataset.py
backend/src/gqcore/utils/k8s/: context.py
backend/src/gqcore/utils/processors/: __init__.py  acled_filter_agg.py  cports_filter_agg.py  gcdf_filter_agg.py  ucdp_filter_agg.py  zonal_stats_rasterstats.py
backend/stats/: builder.py  template.py  views.py
backend/visualize/: builder.py  data.py  export.py  tasks.py  template.py  template_custom.py  urls.py  views.py
backend/visualize/notebook_templates/: colab_template.ipynb  marimo_template.py
bootstrapping/: bootstrap.sh  nodeserver.service
dev/: README.md  dev.kube.yaml
docs/: citing.md  faq.md  index.md  local-dev.md  using-geoquery.md
frontend/: .gitignore  AGENTS.md  Containerfile  MIGRATION_PLAN.md  package-lock.json  package.json  vite.config.ts
grafana/: README.md  dashboard.json  loki-config.yaml  promtail-config.yaml
ingest/: esa_lc.py  ltdr_ndvi.py  prepare_gB.py
k8s/: dask_test.py  env_setup.sh  prometheus-values.yaml  test.sh
scripts/: gen_ref_pages.py
site/: 404.html  index.html  objects.inv
src/: build_coverage_records.py  build_extract_tasks.py  clear_dangling_tasks.py  extract_rebuild.py  helpers.py  ingest_dataset.py  init_db.py  prepare_gB.py  process_extract_tasks.py
tools/: init_db.py
unused/: add_test_data.py  import_boundaries.py
utils/: helpers.py
www/: .eslintrc.js  Gruntfile.js  (+4 more)
(+466 files in other folders)
