[build-system]
requires = [
    "setuptools>=61",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "gqcore"
description = "Core utilities for GeoQuery"
authors = [
    {name = "Seth Goodman", email = "sgoodman@aiddata.wm.edu"},
    {name = "Jacob Hall", email = "jhall@aiddata.wm.edu"},
]
readme = "README.md"
keywords = ["geoquery", "geospatial", "gis", "geographic"]
dynamic = ["version"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.8"
dependencies = [
    "pyproj >=2.1.0",
    "shapely",
    "pydantic",
    "psycopg",
    "pandas",
    "geopandas",
    "shapely",
    "rasterio",
    "rasterstats @ git+https://github.com/aiddata/geoquery-python-rasterstats@main",
    "dask[array,distributed] == 2023.11.0",
    "dask_kubernetes",
    "reportlab",
    "fastapi",
    "loguru",
    "toml",
    "lz4 == 4.3.2",
    "msgpack == 1.0.6",
    "numpy == 1.26.0",
    "pandas == 2.1.2",
    "tornado == 6.3.3"
]


[project.optional-dependencies]
test = [
    "coverage",
    "pytest >=4.6",
    "pytest-cov >=2.2.0",
]
dev = [
    "gqcore[test]",
    "twine",
]


[project.urls]
"Source Code" = "https://github.com/aiddata/geoquery-update"
"Bug Tracker" = "https://github.com/aiddata/geoquery-update/issues"

[tool.setuptools.dynamic]
version = {attr = "gqcore.__init__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
known_first_party = ["gqcore"]
