[project]
name = "geoquery"
version = "0.1.0"
description = "A tool for accessing and extracting geospatial datae"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pyarrow>=24.0.0",
    "zensical>=0.0.23",
    "geoquery-backend",
]

[dependency-groups]
docs = ["zensical~=0.0.43"]

[tool.uv]
default-groups = ["docs"]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[project.urls]
"Source Code" = "https://github.com/aiddata/geoquery-update"
"Bug Tracker" = "https://github.com/aiddata/geoquery-update/issues"

[tool.uv.workspace]
members = ["backend"]

[tool.uv.sources]
geoquery-backend = { workspace = true }
