[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "geoquery-backend"
description = "Django backend for GeoQuery"
authors = [
    { name = "Seth Goodman", email = "sgoodman@aiddata.wm.edu" },
    { name = "Jacob Hall", email = "jhall@aiddata.wm.edu" },
]
readme = "README.md"
keywords = ["geoquery", "geospatial", "gis", "geographic"]
dynamic = ["version"]
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.12"
dependencies = [
    "pyproj",
    "shapely",
    "pydantic",
    "pandas",
    "geopandas",
    "shapely",
    "rasterio",
    "rasterstats @ git+https://github.com/aiddata/geoquery-python-rasterstats@80ab2f2a01d0aa99d935ca7fe7ed422b9f52f9b7",
    "dask[array,distributed] == 2024.10.0",
    "dask_kubernetes == 2024.9.0",
    "reportlab",
    "fastapi[standard]",
    "loguru",
    "toml",
    "numpy",
    "numpy",
    "pandas",
    "kubernetes",
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "django>=5.2.6",
    "psycopg2-binary>=2.9.10",
    "djangorestframework>=3.16.1",
    "djangorestframework-gis>=1.2.0",
    "django-cors-headers>=4.9.0",
    "celery[librabbitmq]>=5.6",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
